# finance

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh  justfile
src/: database.rs  main.rs  transaction.rs
