[package]
name = "finance"
version = "0.1.0"
edition = "2024"
authors = ["Marco E Oyola <mestefano.oyola@gmail.com>"]
description = "Personal finance manager written in Rust"
readme = "README.md"
repository = "https://github.com/mestefano/finance"
license = "MIT"
keywords = ["finance", "money", "budget", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dialoguer = "0.11"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

